# pyledger

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
pyledger/core/: accounts.py  entries.py  exceptions.py  ledger.py  transactions.py
tests/: test_basic.py
